--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,2 +1,17 @@
-<key>MinimumOSVersion</key>
-<string>15.5</string>
+# ios/Podfile
+platform :ios, '15.5'   # <-- was 14.0
+use_frameworks! :linkage => :static
+use_modular_headers!
+
+require File.expand_path(File.join('..', 'Flutter', 'podhelper'), __FILE__)
+flutter_ios_podfile_setup
+
+target 'Runner' do
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    flutter_additional_ios_build_settings(target)
+  end
+end
