--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,13 @@
 # ios/Podfile
-platform :ios, '15.5'   # <-- was 14.0
+
+# Minimum iOS version (required by google_mlkit_commons and newer Firebase)
+platform :ios, '15.5'
+
+# Good defaults for Flutter pods
 use_frameworks! :linkage => :static
 use_modular_headers!
 
+# Flutter helper
 require File.expand_path(File.join('..', 'Flutter', 'podhelper'), __FILE__)
 flutter_ios_podfile_setup
 
@@ -11,7 +16,12 @@ target 'Runner' do
 end
 
 post_install do |installer|
-  installer.pods_project.targets.each do |target|
-    flutter_additional_ios_build_settings(target)
+  # Ensure ALL pods (and Xcode build settings for pods) target iOS 15.5
+  installer.pods_project.targets.each do |t|
+    t.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
+    end
+    # Keep Flutter’s extra settings (bitcode off, etc.)
+    flutter_additional_ios_build_settings(t)
   end
 end
