--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: first_flutter_app
 description: "A new Flutter project."
 publish_to: 'none'
-
 version: 1.0.0+6
 
 environment:
@@ -12,22 +11,30 @@ dependencies:
     sdk: flutter
   url_launcher: ^6.3.1
   flutter_rating_bar: ^4.0.0
+
+  # Firebase 2.x stack (nanopb 2.x)
   firebase_core: ^2.30.0
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.9.0
+  firebase_storage: ^11.7.7
+
+  # Maps/geo/etc.
   google_maps_flutter: ^2.5.0
   geocoding: ^2.1.0
-  cupertino_icons: ^1.0.8
   geolocator: ^11.0.0
   permission_handler: ^11.3.1
+
+  # UI + misc
+  cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.5.0
   provider: ^6.1.1
   timeago: ^3.6.0
   image_picker: ^1.1.2
-  firebase_storage: ^11.7.7
   google_fonts: ^6.2.1
-  google_mlkit_translation: ^0.13.0
-  google_mlkit_language_id: ^0.13.0
+
+  # ML Kit — keep BOTH on 0.12.x to stay on nanopb 2.x
+  google_mlkit_translation: ^0.12.0
+  google_mlkit_language_id: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -37,4 +44,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/        # includes nyari_wordmark.png and any future images
+    - assets/images/
