--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   google_fonts: ^6.2.1
 
   # ML Kit — keep BOTH on 0.12.x to stay on nanopb 2.x
-  google_mlkit_translation: ^0.11.0
-  google_mlkit_language_id: ^0.12.0
+  google_mlkit_translation: 0.11.0
+  google_mlkit_language_id: 0.12.0
 
 dev_dependencies:
   flutter_test:
