--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,6 @@
+# --- Force CocoaPods to use Codemagic's Flutter SDK path ---
+ENV['FLUTTER_ROOT'] = File.expand_path('~/programs/flutter')
+
 platform :ios, '15.5'
 use_frameworks! :linkage => :static
 use_modular_headers!
@@ -12,8 +15,10 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
+      # Ensure the deployment target is high enough for Google Maps & newer pods
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
     end
+    # Keep Flutter/Xcode flags CocoaPods expects
     flutter_additional_ios_build_settings(t)
   end
 end
