--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,11 +25,46 @@ target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
+# If you have test targets, you can add them too:
+# target 'RunnerTests' do
+#   inherit! :search_paths
+# end
+
 post_install do |installer|
-  installer.pods_project.targets.each do |t|
-    t.build_configurations.each do |config|
+  installer.pods_project.targets.each do |target|
+    # Keep your deployment target override
+    target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
     end
-    flutter_additional_ios_build_settings(t)
+
+    # Keep Flutter's additional build settings
+    begin
+      flutter_additional_ios_build_settings(target)
+    rescue
+    end
+
+    # ---- BEGIN: Strip unsupported '-G...' flags from BoringSSL-GRPC ----
+    if target.name == 'BoringSSL-GRPC'
+      # 1) Clean per-file compiler flags
+      target.source_build_phase.files.each do |file|
+        s = file.settings
+        next unless s && s['COMPILER_FLAGS']
+        flags = s['COMPILER_FLAGS'].is_a?(String) ? s['COMPILER_FLAGS'].split : Array(s['COMPILER_FLAGS'])
+        flags.reject! { |f| f.start_with?('-G') } # removes '-G...' variants
+        s['COMPILER_FLAGS'] = flags.join(' ')
+      end
+
+      # 2) Clean target-level OTHER_CFLAGS / OTHER_CPLUSPLUSFLAGS just in case
+      target.build_configurations.each do |config|
+        %w[OTHER_CFLAGS OTHER_CPLUSPLUSFLAGS].each do |key|
+          next unless config.build_settings[key]
+          flags = config.build_settings[key]
+          flags = flags.split if flags.is_a?(String)
+          flags = Array(flags).reject { |f| f.start_with?('-G') }
+          config.build_settings[key] = flags
+        end
+      end
+    end
+    # ---- END: Strip unsupported '-G...' flags from BoringSSL-GRPC ----
   end
 end
