--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,47 +1,43 @@
 name: first_flutter_app
-description: "A new Flutter project."
-publish_to: 'none'
-version: 1.0.0+7
+description: Nyari mobile app
+publish_to: "none"
+
+version: 1.0.0+9  # bump build number on each upload
 
 environment:
-  sdk: ^3.7.2
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.3.1
-  flutter_rating_bar: ^4.0.0
 
-  # Firebase 2.x stack (nanopb 2.x)
-  firebase_core: ^2.30.0
-  firebase_auth: ^4.17.4
-  cloud_firestore: ^4.9.0
-  firebase_storage: ^11.7.7
-
-  # Maps/geo/etc.
-  google_maps_flutter: ^2.5.0
-  geocoding: ^2.1.0
-  geolocator: ^11.0.0
-  permission_handler: ^11.3.1
-
-  # UI + misc
+  # State / UI (add your libs here if you have them)
   cupertino_icons: ^1.0.8
-  font_awesome_flutter: ^10.5.0
-  provider: ^6.1.1
-  timeago: ^3.6.0
-  image_picker: ^1.1.2
-  google_fonts: ^6.2.1
 
-  # ML Kit — keep BOTH on 0.12.x to stay on nanopb 2.x
-  google_mlkit_translation: 0.11.0
-  google_mlkit_language_id: 0.11.0
+  # --- Firebase / FlutterFire (Xcode 16 compatible) ---
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
+  firebase_storage: ^13.0.2
+
+  # --- Location / Geocoding ---
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+
+  # --- ML Kit (if you use it) ---
+  google_mlkit_commons: ^0.11.0
+  google_mlkit_language_id: ^0.13.0
+  google_mlkit_translation: ^0.13.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0  # keep at least a sane version
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/images/
+
+  # If you have assets, list them here
+  # assets:
+  #   - assets/images/
+  #   - assets/icons/
